Added functional shopcontroller, and editet Shop view to contain current database items. Added images to project

--- a/Eksamen/Eksamen.csproj
+++ b/Eksamen/Eksamen.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <Folder Include="Views\NewFolder\" />
+    <Folder Include="wwwroot\images\background\" />
+    <Folder Include="wwwroot\images\icons\" />
   </ItemGroup>
 
 </Project>
