--- a/Eksamen/appsettings.json
+++ b/Eksamen/appsettings.json
@@ -7,7 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Webshop": "Server=DESKTOP-IOQO0BN\\MADS;Database=Webshop;Trusted_Connection=True;MultipleActiveResultSets=True"
-    }
+  "ConnectionStrings": {
+    "Webshop": "Data Source=DESKTOP-SRC6QHI;Initial Catalog=Webshop;Integrated Security=True"
+  }
 }
