changed connection string.

--- a/Eksamen/appsettings.json
+++ b/Eksamen/appsettings.json
@@ -7,7 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Webshop": "Data Source=DESKTOP-SRC6QHI;Initial Catalog=Webshop;Integrated Security=True"
-  }
+    "ConnectionStrings": {
+        "Webshop": "Data Source=DESKTOP-IOQO0BN\\MADS;Initial Catalog=Webshop;Integrated Security=True"
+    }
 }
